v2 trying to fix background on safari

--- a/background.css
+++ b/background.css
@@ -6,11 +6,12 @@
 }
 
 .background {
+    background: #eddefe;
     z-index: -1;
-    position: absolute;
+    position: fixed;
     display: block;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     top: 0;
     left: 0;
     overflow: hidden;
@@ -24,8 +25,7 @@
     width: 50vmin;
     height: 50vmin;
     border-radius: 50vmin;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
+    backface-visibility: hidden;
     position: absolute;
     animation: move;
     animation-duration: 45;
