--- a/style.css
+++ b/style.css
@@ -2,14 +2,13 @@
 @import url('background.css');/*navigation menus for desktop and mobile*/
 
 /* GLOBAL STYLES: apply to all screens*/
-body{
+body, html{
     display: flex;
     flex-direction: column;
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100lvh;
-    min-height: 100svh;
+    min-height: 100dvh;
 }
 /*Google Fonts*/
 .fredoka-bubbly {
